# mc2015_final

./: Makefile  README.org  analysis.ipynb  report.org  run.py  setup.py  slides
src/: CMakeLists.txt  equil.cpp  equil.h  evolve.pyx  header.h  integrate.cpp  integrate.h  lorenz63.c  mcmc.cpp  mcmc.h  param_search.cpp
